--- a/backend/package.json
+++ b/backend/package.json
@@ -2,8 +2,9 @@
   "name": "backend",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
@@ -12,7 +13,7 @@
   "dependencies": {
     "axios": "^1.11.0",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.0",
     "express": "^5.1.0"
   }
 }
+
