--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,5 +1,5 @@
 {
-  "version": 1,
+  "version": 2,
   "builds": [
     {
       "src": "index.js",
@@ -8,9 +8,10 @@
   ],
   "routes": [
     {
-      "src": "/api/(.*)",
-      "dest": "/index.js"
+      "src": "/api/stocks",
+      "dest": "index.js"
     }
   ]
 }
+
 
