--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,9 @@
     "axios": "^1.11.0",
     "cors": "^2.8.5",
     "express": "^5.1.0"
-  }
+  },
+  "devDependencies": {
+  "dotenv": "^17.2.0"
+}
 }
 
